--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^128.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "nanoid": "^5.0.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
